--- a/assets/scss/components/_toolbar.scss
+++ b/assets/scss/components/_toolbar.scss
@@ -11,7 +11,7 @@
   ul.nav--main {
     display: inherit;
     justify-content: flex-end;
-    text-align: right;
+    text-align: left;
 
     > li {
       list-style: none;
