--- a/assets/scss/layout/_single.scss
+++ b/assets/scss/layout/_single.scss
@@ -236,7 +236,6 @@ body:not(.blog, .archive) .site-main {
         width: 50px;
         height: 50px;
         margin-right: 15px;
-        border-radius: 50%;
         vertical-align: middle;
       }
       .comment-metadata, .comment-author {
